@@ -81,10 +81,12 @@
   (setv x 1)
   (setv y 1)
   (assert-equal x y)
-  (setv x (setv y  12))
+  (setv y 12)
+  (setv x y)
   (assert-equal x 12)
   (assert-equal y 12)
-  (setv x (setv y (fn [x] 9)))
+  (setv y (fn [x] 9))
+  (setv x y)
   (assert-equal (x y) 9)
   (assert-equal (y x) 9)
   (try (do (setv a.b 1) (assert False))
