@@ -39,8 +39,8 @@
 (defn test-decorator-clobbing []
   "NATIVE: Tests whether nested decorators work"
   (do
-    (defn dec1 [f] (defn k [] (+ (f) 1)))
-    (defn dec2 [f] (defn k [] (+ (f) 2)))
+    (defn dec1 [f] (fn [] (+ (f) 1)))
+    (defn dec2 [f] (fn [] (+ (f) 2)))
     (with-decorator dec1
       (with-decorator dec2
         (defn f [] 1)))
