@@ -7,6 +7,7 @@ Changes from 0.12.1
    * Added bytestring literals, which create `bytes` objects under Python 3
      and `str` objects under Python 2
    * Commas and underscores are allowed in numeric literals
+   * `setv` always returns None
    * with-decorator: Allow a `setv` form as the form to be decorated
    * xor: If exactly one argument is true, return it
    * hy.core.reserved is now hy.extra.reserved
@@ -19,6 +20,7 @@ Changes from 0.12.1
      parses to a false value (e.g., the empty string)
    * A `yield` inside of a `with` statement will properly suppress implicit
      returns.
+   * `setv` no longer unnecessarily tries to get attributes
 
 Changes from 0.12.0
 
